@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020231105"
-#define public MagickPackageReleaseDate "snapshot-20231105"
+#define public MagickPackageVersionAddendum ".020231106"
+#define public MagickPackageReleaseDate "snapshot-20231106"
