@@ -1,3 +1,8 @@
+2023-11-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/wpg.c (ExtractPostscript): Restore previous
+	implementation.
+
 2023-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/utility.c (ExpandFilenames): Fix memory leak of existing
